# backend/zane_api/serializers.py
@@ -1,6 +1,7 @@
 from typing import List
 from rest_framework.serializers import *
 from django.contrib.auth.models import User
+from . import models
 
 
 class ErrorResponseSerializer(Serializer):
@@ -11,3 +12,11 @@ class UserSerializer(ModelSerializer):
     class Meta:
         model = User
         fields = ["username", "first_name", "last_name", "is_staff"]
+
+
+class ProjectSerializer(ModelSerializer):
+    owner = UserSerializer(many=False, read_only=True)
+
+    class Meta:
+        model = models.Project
+        fields = ["name", "slug", "archived", "owner", "created_at", "updated_at"]
