# backend/zane_api/views/__init__.py
@@ -1,1 +1,2 @@
 from .auth import *
+from .projects import *
